# data_science_group

./: Preliminar_Datos_min.md  README.md  docker-compose.yml  dockerfile  pyproject.toml  readme.md  streamlit_app.py
Data/: .~lock.routes.csv#  ev_stations.csv
Data/ruta/: .~lock.ruta_leon_girona.csv#
Electrlineras-reve/: ejemplo_scrapping_reve .txt  permiso_scrapping.txt
app/: api.py  api_habitos.py  api_repostaje.py
app_habitos/: api.py
app_repostaje/: api.py
data/: alerta_mantenimiento.py  beneficios_tarjeta.csv  puntos_recarga_electrica.csv  puntos_repostaje.csv  routes.csv  rutas.csv  stations.csv  vehicles.csv
data/metodo_1_prevReunion/: crear_datos_std.ipynb
data/metodo_1_prevReunion/output_data/: vehicle_catalog.csv
data/metodo_2_prevReunion/: fuel_prediction_system.py
data/misc/: Preliminar_Datos_min.md  puntos_repostaje.csv  routes.csv  stations.csv  vehicles.csv
data/misc/metodo_1_prevReunion/output_data/: refuel_events_raw.csv  vehicle_catalog.csv
data/misc/metodo_2_prevReunion/: crear_datos_std.ipynb  espana_vehiculos_pesados_combustibles.csv  espana_vehiculos_pesados_consumos.csv  espana_vehiculos_pesados_electricos.csv
data/misc/ruta/: puntos_comunes.txt  puntos_recarga_electrica.csv  viajes_leon_girona.json
data/processed/: beneficios_tarjeta.csv  puntos_repostaje.csv  putnos_recarga_electrica.csv  rutas.csv
data/raw/: estaciones_españa.csv
data/ruta/: beneficios_tarjeta.csv  puntos_recarga_electrica.csv  puntos_repostaje.csv  ruta_leon_girona.csv
data/sinteticos/: beneficios_tarjeta.csv  habitos_telemetria.csv  puntos_recarga_electrica.csv  puntos_repostaje.csv  rutas.csv
data/ubicacion_usuario/: ubi_android.py  ubi_url_imprecisa.py
doc/: Entrada.md  Estructura.md  resumen.md
docs/: Entrada.md  Estructura.md  Informe_ejecutivo.md  Informe_técnico.md  resumen.md
model/: rank_refuel_pipe.joblib
models/: habits_clusters.joblib  habits_rules.json
notebooks/: NB01_ltr_rank_refuel.ipynb  NB02_habits_efficiency.ipynb  NB03_api_smoke_test.ipynb  preview_work.ipynb
reco/: utils.py
reco/ml/: ml_utils.py  rank_refuel.py  train_ranker.py
src/: generar_datos.py  habits_efficiency.py  model_store.py  rank_repostaje.py  sintetico.py  train_ranker.py  utils.py
src/ml/: habits_efficiency.py  model_store.py  rank_refuel.py  train_ranker.py
synthetic_data/: gasolineras_ruta_leon_girona.csv  synthetic_data_rev_Flavio.ipynb
