[project]
name = "desafio-r3"
version = "0.2.0"
description = "App de recomendaciones de ahorro (repostaje) y hábitos eficientes para gestión de clientes/flotas."
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "fastapi[standard]>=0.115.0",
  "pandas>=2.2",
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "lightgbm>=4.0",          # LTR Ranker (fallback si no disponible)
  "python-multipart>=0.0.9",
  "joblib>=1.4",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "ruff>=0.5",
  "black>=24.8.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app_repostaje", "app_habitos", "src"]

[tool.hatch.build.targets.sdist]
include = ["app_repostaje", "app_habitos", "src", "data", "models", "README.md", "pyproject.toml"]

[tool.uv]
managed = true

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
