[project]
name = "data_science_group"
version = "1.0.1"
description = "API unificada: Recomendaciones de repostaje y hábitos eficientes para clientes/flotas."
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "fastapi[standard]>=0.115.0",
  "pandas>=2.2",
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "lightgbm>=4.0",
  "python-multipart>=0.0.9",
  "joblib>=1.4",
  "streamlit>=1.36"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "ruff>=0.5",
  "black>=24.8.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "src"]

[tool.hatch.build.targets.sdist]
include = ["app", "src", "data", "models", "README.md", "pyproject.toml", "notebooks", "informes"]

[tool.uv]
managed = true

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
